@@ -23,6 +23,7 @@
         <entry key="app/src/main/res/drawable/ic_round_filter_alt_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_filter_b_and_w.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_light_mode_to_dark_mode_anim.xml" value="0.3640625" />
+        <entry key="app/src/main/res/drawable/ic_round_navigate_next.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_palette_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_person_anim.xml" value="0.3640625" />
         <entry key="app/src/main/res/drawable/ic_round_refresh_anim.xml" value="0.3640625" />
