@@ -163,7 +163,7 @@
           android:src="@drawable/ic_round_palette_anim"
           tools:ignore="ContentDescription" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
 
           <TextView
             style="@style/Widget.Doodle.TextView.ListItem.Title"
@@ -174,6 +174,11 @@
             android:text="@string/appearance_description" />
 
         </LinearLayout>
+
+        <ImageView
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon.End"
+          android:src="@drawable/ic_round_navigate_next"
+          tools:ignore="ContentDescription" />
 
       </LinearLayout>
 
@@ -188,7 +193,7 @@
           android:src="@drawable/ic_round_swap_horiz_anim"
           tools:ignore="ContentDescription" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
 
           <TextView
             style="@style/Widget.Doodle.TextView.ListItem.Title"
@@ -199,6 +204,11 @@
             android:text="@string/parallax_description" />
 
         </LinearLayout>
+
+        <ImageView
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon.End"
+          android:src="@drawable/ic_round_navigate_next"
+          tools:ignore="ContentDescription" />
 
       </LinearLayout>
 
@@ -213,7 +223,7 @@
           android:src="@drawable/ic_round_filter_center_focus_anim"
           tools:ignore="ContentDescription" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
 
           <TextView
             style="@style/Widget.Doodle.TextView.ListItem.Title"
@@ -224,6 +234,11 @@
             android:text="@string/size_description" />
 
         </LinearLayout>
+
+        <ImageView
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon.End"
+          android:src="@drawable/ic_round_navigate_next"
+          tools:ignore="ContentDescription" />
 
       </LinearLayout>
 
@@ -238,7 +253,7 @@
           android:src="@drawable/ic_round_settings_suggest"
           tools:ignore="ContentDescription" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
 
           <TextView
             style="@style/Widget.Doodle.TextView.ListItem.Title"
@@ -249,6 +264,11 @@
             android:text="@string/other_description" />
 
         </LinearLayout>
+
+        <ImageView
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon.End"
+          android:src="@drawable/ic_round_navigate_next"
+          tools:ignore="ContentDescription" />
 
       </LinearLayout>
 
@@ -263,7 +283,7 @@
           android:src="@drawable/ic_round_info_outline"
           tools:ignore="ContentDescription" />
 
-        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox">
+        <LinearLayout style="@style/Widget.Doodle.LinearLayout.ListItem.TextBox.Stretch">
 
           <TextView
             style="@style/Widget.Doodle.TextView.ListItem.Title"
@@ -274,6 +294,11 @@
             android:text="@string/about_description" />
 
         </LinearLayout>
+
+        <ImageView
+          style="@style/Widget.Doodle.ImageView.ListItem.Icon.End"
+          android:src="@drawable/ic_round_navigate_next"
+          tools:ignore="ContentDescription" />
 
       </LinearLayout>
 
